Fix validation script.